[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
knuffel = "2.0.0"
miette = { version = "4.3.0", features = ["fancy"] }
signal-child = "1.0.5"
signal-hook = "0.3.14"
